derive/tests/snapshots/on_delete_error/Book/get_book_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Book` from the `book` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_book_by_id<'a>(
        &'a self,
        id: impl Into<BookId> + Clone,
    ) -> Result<Book, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().book().id().find(id.clone().into().value()) {
            Some(book) => Ok(book),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "book".into(),
                    column_names_and_row_values: format!(
                        "{{ , id : {}  }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Book` from the `book` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_book_by_id<'a>(
        &'a self,
        id: impl Into<BookId> + Clone,
    ) -> Result<Book, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().book().id().find(id.clone().into().value()) {
            Some(book) => Ok(book),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "book".into(),
                    column_names_and_row_values: format!(
                        "{{ , id : {}  }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
